--- a/apps.json
+++ b/apps.json
@@ -9,7 +9,7 @@
       "bundleIdentifier": "com.spiri2.s2vids",
       "developerName": "spiri2",
       "localizedDescription": "s2vids is a subscription-based streaming service offering a vast library of movies and Tv Shows, all accessible on internet-connected devices like smart TVs, phones, and tablets. Watch as much content as you want, request virtually any movie, Tv Show including Anime, and PPV titles, and can download titles for offline viewing. You can also Invite friends and family with randomized invite codes.",
-      "iconURL": "https://example.com/s2vids-icon.png",
+      "iconURL": "https://example.com/s2vids-1024x1024.PNG",
       "category": "entertainment",
       "screenshots": [
         "https://example.com/s2vids-screen1.png",
