--- a/apps.json
+++ b/apps.json
@@ -13,7 +13,13 @@
       "category": "entertainment",
       "screenshots": [
         "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-screenshot1.png"
-       
+      ],
+      "permissions": [
+        {
+          "type": "entitlement",
+          "name": "Associated Domains",
+          "key": "com.apple.developer.associated-domains"
+        }
       ],
       "versions": [
         {
