--- a/apps.json
+++ b/apps.json
@@ -8,7 +8,7 @@
       "name": "s2vids",
       "bundleIdentifier": "com.spiri2.s2vids",
       "developerName": "spiri2",
-      "localizedDescription": "s2vids is a subscription-based streaming service offering a vast library of movies and Tv Shows, all accessible on internet-connected devices like smart TVs, phones, and tablets. Watch as much content as you want, request virtually any movie, Tv Show including Anime, and PPV titles, and can download titles for offline viewing. Use signup code YS48WTY7 to get started",
+      "localizedDescription": "s2vids is a subscription-based streaming service offering a vast library of movies and Tv Shows, all accessible on internet-connected devices like smart TVs, phones, and tablets. Watch as much content as you want, request virtually any movie, Tv Show including Anime, and PPV titles, and can download titles for offline viewing. Use signup code **YS48WTY7** to get started.",
       "iconURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-1024x1024.PNG",
       "category": "entertainment",
       "screenshots": [
@@ -23,6 +23,15 @@
       ],
       "versions": [
         {
+          "version": "1.0.4",
+          "buildVersion": "5",
+          "date": "2025-11-05",
+          "localizedDescription": "Version 1.0.4 — Added improved video streaming performance, fixed buffering issues, and minor UI polish.",
+          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.0.4/s2vids.ipa",
+          "size": 13000000,
+          "minOSVersion": "15.0"
+        },
+        {
           "version": "1.0.3",
           "buildVersion": "4",
           "date": "2025-10-20",
@@ -34,5 +43,14 @@
       ]
     }
   ],
-  "news": []
+  "news": [
+    {
+      "title": "🎬 s2vids v1.0.4 Now Live!",
+      "identifier": "s2vids-v1.0.4",
+      "caption": "Improved video playback and stability fixes.",
+      "tintColor": "#0EA5E9",
+      "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-banner.png",
+      "url": "https://repo.s2vids.org/apps.json"
+    }
+  ]
 }
