--- a/apps.json
+++ b/apps.json
@@ -50,7 +50,7 @@
       "caption": "Improved video playback and stability fixes.",
       "tintColor": "#0EA5E9",
       "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-banner.png",
-      "url": "https://repo.s2vids.org/apps.json"
+      "url": "https://repo.s2vids.org/apps.json",
       "date": "2025-10-21"
     }
   ]
