--- a/apps.json
+++ b/apps.json
@@ -10,7 +10,7 @@
       "developerName": "spiri2",
       "localizedDescription": "s2vids is a subscription-based streaming service offering a vast library of movies and Tv Shows, all accessible on internet-connected devices like smart TVs, phones, and tablets. Watch as much content as you want, request virtually any movie, Tv Show including Anime, and PPV titles, and can download titles for offline viewing. \n\nSignup Code: YS48WTY7",
       "iconURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-1024x1024.PNG",
-      "category": "entertainment", 
+      "category": "entertainment",
       "screenshots": [
         "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-screenshot1.png"
       ],
@@ -22,6 +22,15 @@
         }
       ],
       "versions": [
+        {
+          "version": "1.0.5",
+          "buildVersion": "6",
+          "date": "2025-10-21",
+          "localizedDescription": "Version 1.0.5 — Live TV: properly parse the Misc source (Jellyfin-style parsing) and add robust Windows-1252 text decoding. Stability and small UI tweaks.",
+          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.0.5/s2vids.ipa",
+          "size": 13000000,
+          "minOSVersion": "15.0"
+        },
         {
           "version": "1.0.4",
           "buildVersion": "5",
@@ -44,6 +53,15 @@
     }
   ],
   "news": [
+    {
+      "title": "🎬 s2vids v1.0.5 Released",
+      "identifier": "s2vids-v1.0.5",
+      "caption": "Misc source now parses correctly + decoding fix.",
+      "tintColor": "#0EA5E9",
+      "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-banner.png",
+      "url": "https://repo.s2vids.org/apps.json",
+      "date": "2025-10-21"
+    },
     {
       "title": "🎬 s2vids v1.0.4 Now Live!",
       "identifier": "s2vids-v1.0.4",
