--- a/apps.json
+++ b/apps.json
@@ -26,7 +26,7 @@
           "version": "1.0.5",
           "buildVersion": "6",
           "date": "2025-10-21",
-          "localizedDescription": "Version 1.0.5 — Live TV: properly parse the Misc source (Jellyfin-style parsing) and add robust Windows-1252 text decoding. Stability and small UI tweaks.",
+          "localizedDescription": "Bug Fixes",
           "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.0.5/s2vids.ipa",
           "size": 13000000,
           "minOSVersion": "15.0"
