--- a/apps.json
+++ b/apps.json
@@ -23,6 +23,14 @@
       ],
       "versions": [
         {
+          "version": "1.0.7",
+          "buildVersion": "7",
+          "date": "2025-10-28",
+          "localizedDescription": "• Playback now uses Apple’s built-in media player.\n• UI Improvements",
+          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.0.7/s2vids.ipa",
+          "minOSVersion": "15.1"
+        },
+        {
           "version": "1.0.6",
           "buildVersion": "6",
           "date": "2025-10-26",
@@ -62,6 +70,15 @@
     }
   ],
   "news": [
+    {
+      "title": "🎬 s2vids v1.0.7 Released",
+      "identifier": "s2vids-v1.0.7",
+      "caption": "Playback now uses Apple’s built-in player + UI improvements.",
+      "tintColor": "#0EA5E9",
+      "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-banner.png",
+      "url": "https://repo.s2vids.org/apps.json",
+      "date": "2025-10-28"
+    },
     {
       "title": "🎬 s2vids v1.0.6 Released",
       "identifier": "s2vids-v1.0.6",
