Fix typos in s2vids app descriptions

--- a/apps.json
+++ b/apps.json
@@ -8,7 +8,7 @@
       "name": "s2vids",
       "bundleIdentifier": "com.spiri2.s2vids",
       "developerName": "spiri2",
-      "localizedDescription": "s2vids is a subscription-based streaming service offering a vast library of movies and TV Shows, all accessible on internet-connected devices like smart TVs, phones, and tablets. Watch as much content as you want, request virtually any movie, TV Show including Anime, and PPV titles, and download titles for offline viewing.\n\nSignup Code: YS48WTY7",
+      "localizedDescription": "s2vids is a subscription-based streaming service offering a vast library of movies and Tv Shows, all accessible on internet-connected devices like smart TVs, phones, and tablets. Watch as much content as you want, request virtually any movie, Tv Show including Anime, and PPV titles, and can download titles for offline viewing. \n\nSignup Code: YS48WTY7",
       "iconURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-1024x1024.PNG",
       "category": "entertainment",
       "screenshots": [
@@ -26,7 +26,7 @@
           "version": "1.0.7",
           "buildVersion": "7",
           "date": "2025-10-28",
-          "localizedDescription": "• Playback now uses Apple's built-in media player.\n• UI Improvements",
+          "localizedDescription": "• Playback now uses Apples built in media player.\n• UI Improvements",
           "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.0.7/s2vids.ipa",
           "size": 13000000,
           "minOSVersion": "15.1"
@@ -74,7 +74,7 @@
     {
       "title": "🎬 s2vids v1.0.7 Released",
       "identifier": "s2vids-v1.0.7",
-      "caption": "Playback now uses Apple’s built-in media player + UI improvements.",
+      "caption": "Playback now uses Apple’s built in media player + UI Improvements.",
       "tintColor": "#0EA5E9",
       "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-banner.png",
       "url": "https://repo.s2vids.org/apps.json",
