--- a/apps.json
+++ b/apps.json
@@ -23,6 +23,15 @@
       ],
       "versions": [
         {
+          "version": "1.0.8",
+          "buildVersion": "8",
+          "date": "2025-11-3",
+          "localizedDescription": "• Swipe up → switch to landscape.\n• Swipe down (or left/right if already landscape) → return to portrait \n• Swipe down in the center of the media player → exits media player \n• Discover page now shows 3 tabs (All, Movies, TV). You can now also request Tv Shows. \n• UI Updates",
+          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.0.8/s2vids.ipa",
+          "size": 13000000,
+          "minOSVersion": "15.1"
+        },
+        {
           "version": "1.0.7",
           "buildVersion": "7",
           "date": "2025-10-28",
@@ -71,6 +80,15 @@
     }
   ],
   "news": [
+    {
+      "title": "🎬 s2vids v1.0.8 Released",
+      "identifier": "s2vids-v1.0.8",
+      "caption": "• Swipe up → switch to landscape.\n• Swipe down (or left/right if already landscape) → return to portrait \n• Swipe down in the center of the media player → exits media player \n• Discover page now shows 3 tabs (All, Movies, TV). You can now also request Tv Shows. \n• UI Updates",
+      "tintColor": "#0EA5E9",
+      "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-banner.png",
+      "url": "https://repo.s2vids.org/apps.json",
+      "date": "2025-11-3"
+    },
     {
       "title": "🎬 s2vids v1.0.7 Released",
       "identifier": "s2vids-v1.0.7",
