--- a/apps.json
+++ b/apps.json
@@ -8,7 +8,7 @@
       "name": "s2vids",
       "bundleIdentifier": "com.spiri2.s2vids",
       "developerName": "spiri2",
-      "localizedDescription": "s2vids is a subscription-based streaming service offering a vast library of movies and Tv Shows, all accessible on internet-connected devices like smart TVs, phones, and tablets. Watch as much content as you want, request virtually any movie, Tv Show including Anime, and PPV titles, and can download titles for offline viewing. \n\nSignup Code: ZNXXJW9Y ",
+      "localizedDescription": "Stream movies and Tv Shows, all accessible on smart TVs, phones, and tablets. Watch as much content as you want, request virtually any movie, Tv Show including Anime, and PPV titles, and can download titles for offline viewing. \n\nSignup Code: ZNXXJW9Y ",
       "iconURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-1024x1024.PNG",
       "category": "entertainment",
       "screenshots": [
@@ -22,6 +22,15 @@
         }
       ],
       "versions": [
+        {
+          "version": "1.0.9",
+          "buildVersion": "9",
+          "date": "2025-11-3",
+          "localizedDescription": "• UI Fixes",
+          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.0.9/s2vids.ipa",
+          "size": 13000000,
+          "minOSVersion": "15.1"
+        },
         {
           "version": "1.0.8",
           "buildVersion": "8",
