--- a/apps.json
+++ b/apps.json
@@ -170,7 +170,7 @@
       "caption": "Initial Release.",
       "tintColor": "#0EA5E9",
       "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/apex.png",
-      "url": "https://repo.apex.org/apps.json",
+      "url": "https://repo.s2vids.org/apps.json",
       "date": "2025-11-16"
     }
   ]
