--- a/apps.json
+++ b/apps.json
@@ -130,7 +130,7 @@
       "caption": "• Swipe up → switch to landscape.\n• Swipe down (or left/right if already landscape) → return to portrait \n• Swipe down in the center of the media player → exits media player \n• Discover page now shows 3 tabs (All, Movies, TV). You can now also request Tv Shows. \n• UI Updates",
       "tintColor": "#0EA5E9",
       "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-banner.png",
-      "url": "https://repo.s2vids.org/apps.json",
+      "url": "https://repo.spiri2.com/apps.json",
       "date": "2025-11-03"
     },
     {
@@ -139,7 +139,7 @@
       "caption": "Playback now uses Apple’s built in media player + UI Improvements.",
       "tintColor": "#0EA5E9",
       "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-banner.png",
-      "url": "https://repo.s2vids.org/apps.json",
+      "url": "https://repo.spiri2.com/apps.json",
       "date": "2025-10-28"
     },
     {
@@ -148,7 +148,7 @@
       "caption": "PiP, new resources in System panel, bug fixes & UI polish.",
       "tintColor": "#0EA5E9",
       "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-banner.png",
-      "url": "https://repo.s2vids.org/apps.json",
+      "url": "https://repo.spiri2.com/apps.json",
       "date": "2025-10-26"
     },
     {
@@ -157,7 +157,7 @@
       "caption": "Misc source now parses correctly + decoding fix.",
       "tintColor": "#0EA5E9",
       "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-banner.png",
-      "url": "https://repo.s2vids.org/apps.json",
+      "url": "https://repo.spiri2.com/apps.json",
       "date": "2025-10-21"
     },
 
@@ -170,7 +170,7 @@
       "caption": "Initial Release.",
       "tintColor": "#0EA5E9",
       "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/Apex_Full.png",
-      "url": "https://repo.s2vids.org/apps.json",
+      "url": "https://repo.spiri2.com/apps.json",
       "date": "2025-11-16"
     }
   ]
