--- a/apps.json
+++ b/apps.json
@@ -167,7 +167,7 @@
     {
       "title": "Apex v1.0.0 Released",
       "identifier": "Apex-v1.0.0",
-      "caption": "Initial Release.",
+      "caption": "Initial Release",
       "tintColor": "#0EA5E9",
       "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/Apex_Full.png",
       "url": "https://repo.spiri2.com/apps.json",
