--- a/apps.json
+++ b/apps.json
@@ -8,7 +8,7 @@
       "name": "s2vids",
       "bundleIdentifier": "com.spiri2.s2vids",
       "developerName": "spiri2",
-      "localizedDescription": "Stream movies and Tv Shows, all accessible on smart TVs, phones, and tablets. Watch as much content as you want, request virtually any movie, Tv Show including Anime, and PPV titles, and can download titles for offline viewing.\n\nSignup Code: ZNXXJW9Y",
+      "localizedDescription": "Stream movies and Tv Shows, all accessible on smart TVs, phones, and tablets. Watch as much content as you want, request virtually any movie, Tv Show including Anime, and PPV titles, and can download titles for offline viewing.\n\nSignup Code: 1B4MSOY2",
       "iconURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-1024x1024.PNG",
       "category": "Entertainment",
       "screenshots": [
