--- a/apps.json
+++ b/apps.json
@@ -8,7 +8,7 @@
       "name": "s2vids",
       "bundleIdentifier": "com.spiri2.s2vids",
       "developerName": "spiri2",
-      "localizedDescription": "Stream movies and Tv Shows, all accessible on smart TVs, phones, and tablets. Watch as much content as you want, request virtually any movie, Tv Show including Anime, and PPV titles, and can download titles for offline viewing.\n\nSignup Code: LQ16ZZR2",
+      "localizedDescription": "Stream movies and Tv Shows, all accessible on smart TVs, phones, and tablets. \n\nSignup Code: LQ16ZZR2",
       "iconURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-1024x1024.PNG",
       "category": "Entertainment",
       "screenshots": [
@@ -22,7 +22,7 @@
         }
       ],
       "versions": [
-         {
+        {
           "version": "1.1.0",
           "buildVersion": "10",
           "date": "2025-12-14",
@@ -30,78 +30,9 @@
           "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.1.0/s2vids.ipa",
           "size": 13000000,
           "minOSVersion": "15.1"
-        },
-        {
-          "version": "1.0.9",
-          "buildVersion": "9",
-          "date": "2025-11-16",
-          "localizedDescription": "• UI Fixes",
-          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.0.9/s2vids.ipa",
-          "size": 13000000,
-          "minOSVersion": "15.1"
-        },
-        {
-          "version": "1.0.8",
-          "buildVersion": "8",
-          "date": "2025-11-03",
-          "localizedDescription": "• Swipe up → switch to landscape.\n• Swipe down (or left/right if already landscape) → return to portrait \n• Swipe down in the center of the media player → exits media player \n• Discover page now shows 3 tabs (All, Movies, TV). You can now also request Tv Shows. \n• UI Updates",
-          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.0.8/s2vids.ipa",
-          "size": 13000000,
-          "minOSVersion": "15.1"
-        },
-        {
-          "version": "1.0.7",
-          "buildVersion": "7",
-          "date": "2025-10-28",
-          "localizedDescription": "• Playback now uses Apples built in media player.\n• UI Improvements",
-          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.0.7/s2vids.ipa",
-          "size": 13000000,
-          "minOSVersion": "15.1"
-        },
-        {
-          "version": "1.0.6",
-          "buildVersion": "6",
-          "date": "2025-10-26",
-          "localizedDescription": "Added: PiP (Picture in Picture)\nAdded: Additional resources in settings - system panel\nBug Fixes\nUI Improvements",
-          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.0.6/s2vids.ipa",
-          "size": 13000000,
-          "minOSVersion": "15.1"
-        },
-        {
-          "version": "1.0.5",
-          "buildVersion": "6",
-          "date": "2025-10-22",
-          "localizedDescription": "Bug Fixes",
-          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.0.5/s2vids.ipa",
-          "size": 13000000,
-          "minOSVersion": "15.1"
-        },
-        {
-          "version": "1.0.4",
-          "buildVersion": "5",
-          "date": "2025-10-21",
-          "localizedDescription": "Version 1.0.4 — Added improved video streaming performance, fixed buffering issues, and minor UI polish.",
-          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.0.4/s2vids.ipa",
-          "size": 13000000,
-          "minOSVersion": "15.0"
-        },
-        {
-          "version": "1.0.3",
-          "buildVersion": "4",
-          "date": "2025-10-20",
-          "localizedDescription": "Version 1.0.3 — Stability improvements and UI tweaks.",
-          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.0.3/s2vids.ipa",
-          "size": 12345678,
-          "minOSVersion": "15.0"
         }
       ]
     },
-
-
-
-
-
-    
     {
       "name": "Apex for Pokémon GO",
       "bundleIdentifier": "com.spiri2.Apex",
@@ -123,7 +54,7 @@
         {
           "version": "1.0.0",
           "buildVersion": "12",
-          "date": "2025-12-2",
+          "date": "2025-12-02",
           "localizedDescription": "Initial Release.",
           "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.0.0/Apex.ipa",
           "size": 12345678,
@@ -132,8 +63,6 @@
       ]
     }
   ],
-
-  
   "news": [
     {
       "title": "🎬 s2vids v1.1.0 Released",
@@ -145,53 +74,13 @@
       "date": "2025-12-14"
     },
     {
-      "title": "🎬 s2vids v1.0.8 Released",
-      "identifier": "s2vids-v1.0.8",
-      "caption": "• Swipe up → switch to landscape.\n• Swipe down (or left/right if already landscape) → return to portrait \n• Swipe down in the center of the media player → exits media player \n• Discover page now shows 3 tabs (All, Movies, TV). You can now also request Tv Shows. \n• UI Updates",
-      "tintColor": "#0EA5E9",
-      "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-banner.png",
-      "url": "https://repo.spiri2.com/apps.json",
-      "date": "2025-11-03"
-    },
-    {
-      "title": "🎬 s2vids v1.0.7 Released",
-      "identifier": "s2vids-v1.0.7",
-      "caption": "Playback now uses Apple’s built in media player + UI Improvements.",
-      "tintColor": "#0EA5E9",
-      "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-banner.png",
-      "url": "https://repo.spiri2.com/apps.json",
-      "date": "2025-10-28"
-    },
-    {
-      "title": "🎬 s2vids v1.0.6 Released",
-      "identifier": "s2vids-v1.0.6",
-      "caption": "PiP, new resources in System panel, bug fixes & UI polish.",
-      "tintColor": "#0EA5E9",
-      "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-banner.png",
-      "url": "https://repo.spiri2.com/apps.json",
-      "date": "2025-10-26"
-    },
-    {
-      "title": "🎬 s2vids v1.0.5 Released",
-      "identifier": "s2vids-v1.0.5",
-      "caption": "Misc source now parses correctly + decoding fix.",
-      "tintColor": "#0EA5E9",
-      "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-banner.png",
-      "url": "https://repo.spiri2.com/apps.json",
-      "date": "2025-10-21"
-    },
-
-
-
-    
-    {
       "title": "Apex v1.0.0 Released",
       "identifier": "Apex-v1.0.0",
       "caption": "Initial Release",
       "tintColor": "#0EA5E9",
       "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/Apex_Full.png",
       "url": "https://repo.spiri2.com/apps.json",
-      "date": "2025-12-2"
+      "date": "2025-12-14"
     }
   ]
 }
