--- a/apps.json
+++ b/apps.json
@@ -23,11 +23,11 @@
       ],
       "versions": [
         {
-          "version": "1.1.0",
-          "buildVersion": "10",
-          "date": "2025-12-14",
-          "localizedDescription": "• Big Fixes",
-          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.1.0/s2vids.ipa",
+          "version": "1.1.1",
+          "buildVersion": "11",
+          "date": "2025-12-15",
+          "localizedDescription": "• Fixed Reset password issues",
+          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.1.1/s2vids.ipa",
           "size": 13000000,
           "minOSVersion": "15.1"
         }
@@ -65,14 +65,15 @@
   ],
   "news": [
     {
-      "title": "🎬 s2vids v1.1.0 Released",
-      "identifier": "s2vids-v1.1.0",
-      "caption": "• Bug Fixes",
+      "title": "🎬 s2vids v1.1.1 Released",
+      "identifier": "s2vids-v1.1.1",
+      "caption": "• Fixed Reset password issues",
       "tintColor": "#0EA5E9",
       "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-banner.png",
       "url": "https://repo.spiri2.com/apps.json",
-      "date": "2025-12-14"
+      "date": "2025-12-15"
     },
+    
     {
       "title": "Apex v1.0.0 Released",
       "identifier": "Apex-v1.0.0",
