--- a/apps.json
+++ b/apps.json
@@ -55,10 +55,11 @@
       ],
       "versions": [
         {
-          "version": "1.0.1",
-          "buildVersion": "40",
-          "date": "2025-12-28",
-          "localizedDescription": "• Fixed Reset password issues\n• Added Live Weather\n• Pro users can now delete individual Pokemon names from their trade listings\n• Pro users can now \"Bump\" their trade listings that pushes it to the top of the page.\n• Fast Raids is now a standalone tab in dashboard and menu, instead of having to enter the live raids page.\n• UI Improvements",          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.0.1/Apex.ipa",
+          "version": "1.0.2",
+          "buildVersion": "60",
+          "date": "2026-1-10",
+          "localizedDescription": "• Users can now add their trainer name in settings. Trainer name will be included when sharing trainer code and in Trade listings.\n• Users can now private message each other within the app by trainer name\n• UI + backend Improvements\n• Bug Fixes",          
+          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.0.2/Apex.ipa",
           "size": 12345678,
           "minOSVersion": "15.0"
         }
@@ -77,13 +78,13 @@
     },
     
     {
-      "title": "Apex v1.0.1 Released",
-      "identifier": "Apex-v1.0.1",
-      "caption": "• Added Live Weather\n• Pro users can now delete individual Pokemon names from their trade listings\n• Pro users can now \"Bump\" their trade listings that pushes it to the top of the page.\n• Fast Raids is now a standalone tab in dashboard and menu, instead of having to enter the live raids page.\n• UI Improvements",
+      "title": "Apex v1.0.2 Released",
+      "identifier": "Apex-v1.0.2",
+      "caption": "• Users can now add their trainer name in settings. Trainer name will be included when sharing trainer code and in Trade listings.\n• Users can now private message each other within the app by trainer name\n• UI + backend Improvements\n• Bug Fixes",
       "tintColor": "#0EA5E9",
       "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/Apex_Full.png",
       "url": "https://repo.spiri2.com/apps.json",
-      "date": "2025-12-28"
+      "date": "2026-1-10"
     }
   ]
 }
