--- a/apps.json
+++ b/apps.json
@@ -8,7 +8,7 @@
       "name": "s2vids",
       "bundleIdentifier": "com.spiri2.s2vids",
       "developerName": "spiri2",
-      "localizedDescription": "Stream movies and Tv Shows, all accessible on smart TVs, phones, and tablets. \n\nSignup Code: LQ16ZZR2",
+      "localizedDescription": "Stream movies and Tv Shows, all accessible on smart TVs, phones, and tablets. \n\nSignup Code: MY92DXHK",
       "iconURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/s2vids-1024x1024.PNG",
       "category": "Entertainment",
       "screenshots": [
