--- a/apps.json
+++ b/apps.json
@@ -40,7 +40,7 @@
       "name": "Apex for Pokémon GO",
       "bundleIdentifier": "com.spiri2.Apex",
       "developerName": "spiri2",
-      "localizedDescription": "Apex is a Pokémon GO companion app that provides live coordinates for spawns, raids, nests, and more. Apex also provides tools such as Distance calculator, Friend Codes, Trade with other users, and more.",
+      "localizedDescription": "Apex is a Pokémon GO companion app that provides live coordinates for spawns, raids, nests, and tools such as Distance calculator, Friend Codes, Trade with other users, and more.",
       "iconURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/Apex_Full.png",
       "category": "Utilities",
       "screenshots": [
@@ -55,11 +55,11 @@
       ],
       "versions": [
         {
-          "version": "1.0.2",
-          "buildVersion": "61",
-          "date": "2026-1-10",
-          "localizedDescription": "• Users can now add their trainer name in settings. Trainer name will be included when sharing trainer code and in Trade listings.\n• Users can now private message each other within the app by trainer name\n• UI + backend Improvements\n• Bug Fixes",          
-          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/v1.0.2/Apex.ipa",
+          "version": "1.0.3",
+          "buildVersion": "95",
+          "date": "2026-1-26",
+          "localizedDescription": "• Added Promotional Codes - displays in game redeemable codes \n• Added Events Calendar - displays all current and upcoming events \n• Added Power up Calculator \n• Added PokeLids \n• Updated Resources \n• Bug Fixes",          
+          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/1.0.3/Apex.ipa",
           "size": 12345678,
           "minOSVersion": "15.0"
         }
@@ -78,13 +78,13 @@
     },
     
     {
-      "title": "Apex v1.0.2 Released",
-      "identifier": "Apex-v1.0.2",
-      "caption": "• Users can now add their trainer name in settings. Trainer name will be included when sharing trainer code and in Trade listings.\n• Users can now private message each other within the app by trainer name\n• UI + backend Improvements\n• Bug Fixes",
+      "title": "Apex v1.0.3 Released",
+      "identifier": "Apex-v1.0.3",
+      "caption": "• Added Promotional Codes - displays in game redeemable codes \n• Added Events Calendar - displays all current and upcoming events \n• Added Power up Calculator \n• Added PokeLids \n• Updated Resources \n• Bug Fixes",
       "tintColor": "#0EA5E9",
       "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/Apex_Full.png",
       "url": "https://repo.spiri2.com/apps.json",
-      "date": "2026-1-10"
+      "date": "2026-1-26"
     }
   ]
 }
