--- a/apps.json
+++ b/apps.json
@@ -55,11 +55,11 @@
       ],
       "versions": [
         {
-          "version": "1.0.6",
-          "buildVersion": "131",
-          "date": "2026-2-15",
-          "localizedDescription": "• UX Updates",          
-          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/1.0.6/Apex.ipa",
+          "version": "1.0.7",
+          "buildVersion": "132",
+          "date": "2026-2-16",
+          "localizedDescription": "• Fixed Crashing",          
+          "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/1.0.7/Apex.ipa",
           "size": 12345678,
           "minOSVersion": "15.0"
         }
@@ -78,13 +78,13 @@
     },
     
     {
-      "title": "Apex v1.0.6 Released",
-      "identifier": "Apex-v1.0.6",
-      "caption": "• UX Updates",
+      "title": "Apex v1.0.7 Released",
+      "identifier": "Apex-v1.0.7",
+      "caption": "• Fixed Crashing",
       "tintColor": "#0EA5E9",
       "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/Apex_Full.png",
       "url": "https://repo.spiri2.com/apps.json",
-      "date": "2026-2-15"
+      "date": "2026-2-16"
     }
   ]
 }
