--- a/apps.json
+++ b/apps.json
@@ -55,10 +55,10 @@
       ],
       "versions": [
         {
-          "version": "1.0.8",
-          "buildVersion": "2",
-          "date": "2026-2-16",
-          "localizedDescription": "• UI Updates",          
+          "version": "1.0.9",
+          "buildVersion": "3",
+          "date": "2026-2-26",
+          "localizedDescription": "• Added Live Maps \n• Bug Fixes",          
           "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/1.0.8/Apex.ipa",
           "size": 12345678,
           "minOSVersion": "15.0"
@@ -68,7 +68,7 @@
   ],
   "news": [
     {
-      "title": "🎬 s2vids v1.1.2 Released",
+      "title": ":clapper: s2vids v1.1.2 Released",
       "identifier": "s2vids-v1.1.2",
       "caption": "• UI Updates",
       "tintColor": "#0EA5E9",
@@ -78,13 +78,13 @@
     },
     
     {
-      "title": "Apex v1.0.8 Released",
-      "identifier": "Apex-v1.0.8",
-      "caption": "• UI Updates",
+      "title": "Apex v1.0.9 Released",
+      "identifier": "Apex-v1.0.9",
+      "caption": "• Added Live Maps \n• Bug Fixes",
       "tintColor": "#0EA5E9",
       "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/Apex_Full.png",
       "url": "https://repo.spiri2.com/apps.json",
-      "date": "2026-2-16"
+      "date": "2026-2-26"
     }
   ]
 }
