--- a/apps.json
+++ b/apps.json
@@ -58,7 +58,7 @@
           "version": "1.0.9",
           "buildVersion": "3",
           "date": "2026-2-26",
-          "localizedDescription": "• Added Live Maps \n• Bug Fixes",          
+          "localizedDescription": "• Added Live Maps \n• Bug Fixes \n•UI Fixes",          
           "downloadURL": "https://github.com/spiri2/altstore-repo/releases/download/1.0.9/Apex.ipa",
           "size": 12345678,
           "minOSVersion": "15.0"
@@ -80,7 +80,7 @@
     {
       "title": "Apex v1.0.9 Released",
       "identifier": "Apex-v1.0.9",
-      "caption": "• Added Live Maps \n• Bug Fixes",
+      "caption": "• Added Live Maps \n• Bug Fixes \n•UI Fixes",
       "tintColor": "#0EA5E9",
       "imageURL": "https://raw.githubusercontent.com/spiri2/altstore-repo/main/assets/Apex_Full.png",
       "url": "https://repo.spiri2.com/apps.json",
